--- a/personal/templates/contact.html
+++ b/personal/templates/contact.html
@@ -57,8 +57,9 @@
 				</div>
 			</div>
 			<div class="col-lg-8">
-				<form class="form-area contact-form text-right" id="myForm"
-					action="mail.php" method="post">
+				<center> <font color="green">{{msg}}</font></center>
+				<form class="form-area contact-form text-right"  method="POST">
+					{% csrf_token %}
 					<div class="row">
 						<div class="col-lg-6 form-group">
 							<input name="name" placeholder="Enter your name"
@@ -84,7 +85,7 @@
 						</div>
 						<div class="col-lg-12">
 							<div class="alert-msg" style="text-align: left;"></div>
-							<button class="genric-btn primary" style="float: right;">Send
+							<button type="submit" class="genric-btn primary" style="float: right;">Send
 								Message</button>
 						</div>
 					</div>
